<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/list_header"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="3dp"
    android:background="@color/blue"
    tools:context=".MovieListActivity" >
	
	<TextView 
	    android:id="@+id/list_header_cover"
	    android:layout_width="60dp"
	    android:layout_height="wrap_content"
	    android:layout_alignParentLeft="true"
	    android:layout_centerVertical="true"
	    android:layout_marginLeft="15dp"
	    android:text="@string/activity_table_header_cover"
	    style="@style/MovieNameFont"/>

	<TextView 
	    android:id="@+id/list_cover_title"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_centerInParent="true"
	    android:layout_marginLeft="10dp"
	    android:text="@string/activity_table_header_title"
	    style="@style/MovieNameFont"/>
		
	<TextView 
	    android:id="@+id/list_cover_price"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentRight="true"
	    android:layout_centerVertical="true"
	    android:layout_marginLeft="10dp"
	    android:layout_marginRight="5dp"
	    android:text="@string/activity_table_header_price"
	    style="@style/MovieNameFont"/>

</RelativeLayout>
